--- a/Go23WalletSDKDemo/Go23WalletSDKDemo/Frameworks/Go23SDK.framework/Modules/Go23SDK.swiftmodule/arm64-apple-ios.abi.json
+++ b/Go23WalletSDKDemo/Go23WalletSDKDemo/Frameworks/Go23SDK.framework/Modules/Go23SDK.swiftmodule/arm64-apple-ios.abi.json
@@ -33577,9 +33577,9 @@
     {
       "filePath": "\/Users\/luming\/Desktop\/go23SDK\/Go23SDK\/PrivateModule\/Internal\/FunctionManager\/MPCManager\/MPCManager.swift",
       "kind": "StringLiteral",
-      "offset": 222,
-      "length": 38,
-      "value": "\"wss:\/\/api.go23.test.dbytothemoon.com\""
+      "offset": 177,
+      "length": 23,
+      "value": "\"wss:\/\/sdk.api.go23.us\""
     },
     {
       "filePath": "\/Users\/luming\/Desktop\/go23SDK\/Go23SDK\/PrivateModule\/Internal\/FunctionManager\/MPCManager\/MPCManager.swift",
@@ -34389,9 +34389,9 @@
     {
       "filePath": "\/Users\/luming\/Desktop\/go23SDK\/Go23SDK\/PrivateModule\/HTTPManager\/WalletNetworkLayer.swift",
       "kind": "StringLiteral",
-      "offset": 914,
-      "length": 40,
-      "value": "\"https:\/\/api.go23.test.dbytothemoon.com\""
+      "offset": 871,
+      "length": 25,
+      "value": "\"https:\/\/sdk.api.go23.us\""
     },
     {
       "filePath": "\/Users\/luming\/Desktop\/go23SDK\/Go23SDK\/OpenModule\/OpenModel\/Token\/Go23TokenBalanceModel.swift",
